src/index.css
/* background color: #0E0F0E */
/* 
Macbook pro: 1728px x 1117px2
Ipad 12: 1024px x 1366px
Iphone: 402px x 873px 
*/

:root {
    --cursor-x: 50%;
    --cursor-y: 50%;
    --glow-opacity: 0;
    --glow-color: 255, 255, 255;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

@font-face {
    font-family: "JetBrains Mono";
    src: url("./assets/fonts/JetBrainsMono-Regular.woff2") format("woff2");
    font-weight: normal;
}

@font-face {
    font-family: "JetBrains Mono";
    src: url("./assets/fonts/JetBrainsMono-Medium.woff2") format("woff2");
    font-weight: 500;
}

@font-face {
    font-family: "JetBrains Mono";
    src: url("./assets/fonts/JetBrainsMono-Bold.woff2") format("woff2");
    font-weight: bold;
}

@font-face {
    font-family: "Satoshi";
    src: url("./assets/fonts/Satoshi.woff2") format("woff2");
    font-weight: normal;
}

@media (min-width: 1728px), (max-width: 1728px) {
    body{
        background-image: url("./assets/Background_Desktop.png");
    }

    .content-pane {
        margin-left: 291px;
        margin-top: 112px;

        height: 57.986vh;
        max-width: 709px;
    }

    /* bio */
    .bio-label {
        font-size: 20px;
        margin-bottom: 36px;
    }

    .bio-name {
        font-size: 64px;
        margin-bottom: 9px;
    }

    .bio-title {
        font-size: 32px;
        margin-bottom: 36px;
    }

    .svg-line{
        width: 32px;
        margin-right: 16px;
    }

    .bio {
        margin-bottom: 112px;
    }

    /* sub-header  */
    .sub-header {
        font-size: 20px;
    }

    /* experience */
    .card-item-experience {
        display: flex;
        align-items: center;
        gap: 48px;

        margin-top: 48px;
    }

    .text-experience-year{
        font-size: 20px;
        white-space: nowrap;
    }

    .text-experience-title {
        font-size: 24px;
    }

    .text-experience-description {
        font-size: 22px;
        margin-top: 16px;

        text-align: justify;
    }

    /* projects */
    .wrapper-projects{
        gap: 27px;
        margin-top: 40px;
        margin-bottom: 27px;
    }

    .inner-wrapper-projects{
        padding: 28px 24.5px 28px 29.5px;
    }

    .projects {
        margin-top: 112px;
    }

    .img-projects {
        width: 194px;
        height: 170px;
    }

    .container-projects {
        max-width: 425px;
    }

    .container-item-projects {
        gap: 14px;
    }

    .title-project {
        font-size: 24px;
    }

    .description-project {
        font-size: 20px;
    }

    .techstack-project {
        font-size: 16px;
        border-radius: 34px;    
    }

    .button-project {
        font-size: 14px;
    }

    .wrapper-techstack {
        gap: 8px;
    }
    
    .button-all-projects {
        font-size: 18px;
    }

    /* certifications  */
    .wrapper-certifications {
        gap: 39px;
        margin-top: 40px;
    }

    .certifications {
        margin-top: 112px;
        padding-bottom: 85px;
    }

    .title-certifications {
        font-size: 24px;
        margin-bottom: 8px;
    }

    .description-certifications {
        font-size: 20px;
        margin-bottom: 17px;
    }

    .button-certifications {
        font-size: 16px;
    }
}

@media (max-width: 1024px) {
    body{
        background-image: url("./assets/Background_Ipad.png") !important;
    }

    .content-pane {
        margin-left: 156px;
        margin-top: 182px;

        max-width: 709px;
    }

    /* Bio */
    .bio-label {
        font-size: 20px;
    }

    .bio-name {
        font-size: 48px;
    }

    .bio-title {
        font-size: 24px;
    }

    .text-bio {
        font-size: 20px;
    }

    /* sub-header  */
    .sub-header {
        font-size: 14px;
    }

    /* experience */
    .card-item-experience {
        margin-top: 40px;
    }

    .text-experience-title {
        font-size: 20px;
    }

    .text-experience-description {
        font-size: 20px;
        margin-top: 12px;
    }

    /* projects  */
    .inner-wrapper-projects{
        padding: 33.5px 24.5px 33.5px 29.5px;
    }

    .title-project {
        font-size: 20px;
    }

    .techstack-project {
        font-size: 14px;
    }

    /* certifications  */
    .title-certifications {
        font-size: 20px;
    }

    .button-certifications {
        font-size: 14px;
    }
}

@media (max-width: 402px) {
    body{
        background-image: url("./assets/Background_Iphone.png") !important;
    }

    .content-pane {
        margin-left: 36px;
        margin-top: 132px;

        height: 700px;
        max-width: 330px;
    }

    /* bio  */
    .bio-label {
        font-size: 12px;
        margin-bottom: 18px;
    }

    .bio-name {
        font-size: 20px;
    }

    .bio-title {
        font-size: 12px;
        margin-bottom: 18px;
    }

    .text-bio {
        font-size: 12px;
    }

    .svg-line{
        width: 18px;
        margin-right: 7px;
    }

    .bio {
        margin-bottom: 54px;
    }

    /* sub-header  */
    .sub-header {
        font-size: 9px;
    }

    /* experience */
    .card-item-experience {
        margin-top: 24px;

        flex-direction: column;
        gap: 3px;
    }

    .text-experience-year{
        font-size: 10px;
    }

    .text-experience-title {
        font-size: 12px;
    }

    .text-experience-description {
        font-size: 12px;
        margin-top: 4px;
    }

    .wrapper-experience > :first-child {
        margin-top: 8px;
    }

    /* projects */
    .wrapper-projects{
        gap: 10px;
        margin-top: 8px;
        margin-bottom: 10px;
    }

    .inner-wrapper-projects{
        padding: 12px 18px 12px 18px;
    }

    .projects {
        margin-top: 54px;
    }

    .img-projects {
        display: none;
    }

    .container-projects {
        max-width: 294px;
    }

    .container-item-projects {
        gap: 4px;
    }

    .title-project {
        font-size: 12px;
    }

    .description-project {
        font-size: 12px;
        margin-bottom: 4px;
    }

    .techstack-project {
        font-size: 8px;
        border-radius: 16px;    
    }

    .button-project {
        font-size: 9px;
    }

    .wrapper-techstack {
        gap: 4px;
    }

    .button-all-projects {
        font-size: 12px;
    }

    /* certifications  */
    .wrapper-certifications {
        gap: 22px;
        margin-top: 8px;
    }

    .certifications {
        margin-top: 54px;
    }

    .title-certifications {
        font-size: 12px;
        margin-bottom: 4px;
    }

    .description-certifications {
        font-size: 12px;
        margin-bottom: 8px;
    }

    .button-certifications {
        font-size: 9px;
    }

    .certifications {
        padding-bottom: 22px;
    }

    /* contacts  */
    .content-pane > *:first-child {
        order: 9;
    }
}

/* Small Components  */
body{
    background-color: #0E0F0E;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    background-image:
        radial-gradient(circle at var(--cursor-x) var(--cursor-y), rgba(var(--glow-color), var(--glow-opacity)) 0px, rgba(var(--glow-color), calc(var(--glow-opacity) * 0.35)) 80px, rgba(var(--glow-color), 0) 200px),
        url("./assets/Background_Desktop.png");
    background-blend-mode: screen, normal;
    transition: --glow-opacity 0.2s ease;
}

body:hover {
    --glow-opacity: 0.04;
}

body.pointer-out {
    --glow-opacity: 0;
}

.wrapper {
    height: 100vh;
}

h1 {
    font-family: JetBrains Mono;
    font-weight: bold;
    color: #f6f6f6;
}

h3, .text-bio-bold{
    font-family: JetBrains Mono;
    font-weight: 500;
    color: #f6f6f6;
}

h2 {
    font-family: JetBrains Mono;
    font-weight: normal;
    color: #66d593;
}

p {
    font-family: Satoshi;
}

.text-description-grey-50 {  
    color: #868686;
    opacity: 0.5;
}

.text-jetbrains-mono-regular {
    font-family: JetBrains Mono;
    font-weight: normal;
}

.text-jetbrains-mono-bold {
    font-family: JetBrains Mono;
    font-weight: bold;
}

.text-satoshi-regular {
    font-family: Satoshi;
    font-weight: normal;
}

.primary-green {
    color: #66d593;
}

.white {
    color: #f6f6f6;
}

.overflow {
    overflow-y: scroll;
}

.hide-scrollbar {
  /* Firefox */
  scrollbar-width: none;

  /* Internet Explorer and Edge */
  -ms-overflow-style: none;
}

/* Chrome, Safari and Opera */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
  width: 0;
  height: 0;
}

.text-bio div {
    animation: typing 3s steps(50) forwards;
    overflow: hidden;
    white-space: nowrap;
}

@keyframes typing {
    from {
        width: 0;
    }
    to {
        width: 100%;
    }
}

.card-item-experience:hover {
    .text-experience-title {
        color: #66d593;
    }

    .text-experience-year,
    .text-experience-description {
        color: #f6f6f6;
        opacity: 0.75;

    }
}
/* projects  */
.card-item-projects {
    border: 1px solid rgba(246, 246, 246, 0.2);
}

.text-zoom-out {
  display: inline-block;
  transition: transform 0.3s ease;
  transform-origin: right center;
}

.card-item-projects:hover {

    .title-project {
        color: #66d593;
    }

    .text-zoom-out {
        transform: scale(1.08); 
    }

    border-color: #66d593;
 
    background: linear-gradient(
    rgba(102, 213, 147, 0.1),
    rgba(53, 111, 77, 0.1)
    );
}

/* projects - view all projects button */
.button-all-projects:hover {
    color: #66d593;
}

/* certifications  */
.container-certifications:hover {
    .title-certifications {
        color:#66d593;
    }

    .button-certifications {
        opacity: 100% !important;
        background-color: rgba(39, 191, 101, 0.5) !important;
    }
}

